<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SportIntelligenceTesiMolettaDavide</string>

    <!-- HOME -->
    <string name="tennisHome">TENNIS</string>
    <string name="soccerHome">CALCIO</string>
    <string name="volleyHome">PALLAVOLO</string>
    <string name="basketHome">BASKET</string>

    <!-- TENNIS   HOME -->
    <string name="tournamentSearch">RICERCA PER TORNEO</string>
    <string name="athleteSearch">RICERCA PER ATLETA</string>
    <string name="filterCreation">CREA FILTRO RICERCA</string>
    <string name="filterEditing">GESTISCI FILTRI RICERCA</string>
    <string name="favouriteMatches">RICERCHE PREFERITE</string>

    <!-- RISULTATI RICERCA -->
    <string name="searchResultHeader">RISULTATI RICERCA</string>
    <string name="matchInfo">INFORMAZIONI PARTITA</string>
    <string name="matchStats">STATISTICHE PARTITA</string>
    <string name="matchQuotes">QUOTE</string>
    <string name="filterSelector">SELEZIONA FILTRO</string>
    <string name="setSelector">SELEZIONA SET</string>

    <!-- CREAZIONE FILTRO RICERCA -->
    <string name="filterTitle">CREA FILTRO</string>
    <string name="setStatsFilter">STATISTICHE SET</string>
    <string name="setHistoryFilter">STORICO SET</string>
    <string name="filterName">Nome Ricerca…</string>
    <string name="save">SALVA</string>

    <!-- GESTIONE FILTRI -->
    <string name="filterManagement">GESTISCI FILTRI</string>
    <string name="deleteAll">ELIMINA TUTTI</string>
    <string name="deleteFilter">FILTRO ELIMINATO</string>
    <string name="noFilters">NON SONO ANCORA STATI CREATI FILTRI</string>
    <string name="updateFilter">FILTRO AGGIORNATO</string>

    <!-- MATCH PREFERITI -->
    <string name="noFavouriteMatches">NON CI SONO MATCH PREFERITI</string>
    <string name="deleteMatch">MATCH RIMOSSO DAI PREFERITI</string>

    <!-- TELEGRAM BOT-->
    <string name="telegramBotTitle">TELEGRAM BOT</string>
    <string name="insertId">INSERISCI IL TUO CODICE CHAT TELEGRAM</string>
    <string name="chatId">Chat ID…</string>
    <string name="info" tools:ignore="Typos">Se non sai come trovare il tuo ID Telegram segui questi passi: \n
        \t- Apri l\'app Telegram   \n
        \t- Clicca sulla barra di ricerca  \n
        \t- Cerca \"userinfobot\" e seleziona il primo risultato  \n
        \t- Avvia il bot con il comando \\start  \n
        \t- Copia il tuo ID e incollalo nello spazio apposito  \n
        \t- Clicca il pulsante SALVA  \n
        \t- Ora potrai visualizzare i tuoi dati tramite il bot  \n
        \t  @botname
    </string>
    <string name="noChatID">INSERISCI IL TUO CODICE</string>

    <!-- GENERALS -->
    <string name="search">Cerca…</string>
    <string name="contentDescription">Image</string>
    <string name="noFilterTitle">ASSEGNA UN NOME AL FILTRO</string>
    <string name="noFilterSelected">SELEZIONA ALMENO UN FILTRO</string>
    <string name="savedFilter">FILTRO SALVATO</string>
    <string name="allFilterDeleted">FILTRI ELIMINATI</string>
    <string name="snackBarText">CONNETTENDO AL DATABASE…</string>
    <string name="telegramAddedUser">BOT COLLEGATO CON SUCCESSO</string>
    <string name="telegramNotAddedUser">ERRORE NEL COLLEGAMENTO CON IL BOT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>